Добавлена базовая стилизация

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -5,51 +5,53 @@
     <title>Набор для путешествий &laquo;Baxter of California&raquo;. Барбершоп &laquo;Borodinski&raquo;</title>
     <meta name="keywords" content="barbershop, Brorodinski, барбершоп, Бородинский, средства для ухода, baxter of california, набор для путешествий baxter of california, набор для путешествий, travel kit, средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь">
     <meta name="description" content="Travel kit - необходимый аксессуар во время любого путешествия, в котором находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха.">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
-  <body class="page">
+  <body class="page inner-page">
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html" aria-label="Логотип">
           <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
-        <ul class="page-nav page-nav--main">
+        <ul class="page-nav page-nav__main">
           <li class="page-nav__item">
-            <a class="page-nav__link" href="info.html">Информация</a>
+            <a class="page-nav__link link" href="info.html">Информация</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="news.html">Новости</a>
+            <a class="page-nav__link link" href="news.html">Новости</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="price.html">Прайс-лист</a>
+            <a class="page-nav__link link" href="price.html">Прайс-лист</a>
           </li>
           <li class="page-nav__item page-nav__current">
-            <a class="page-nav__link" href="catalog.html">Магазин</a>
+            <a class="page-nav__link link" href="catalog.html">Магазин</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="contacts.html">Контакты</a>
+            <a class="page-nav__link link" href="contacts.html">Контакты</a>
           </li>
         </ul>
-        <ul class="page-nav page-nav--user">
-          <li class="page-nav__link login-link">
-            <a class="page-nav__link" href="login.html">Вход</a>
+        <ul class="page-nav page-nav__user">
+          <li class="page-nav__item">
+            <a class="page-nav__link login-link link" href="login.html">Вход</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main class="container">
-      <h1 class="content-header__headline">Набор для путешествий &laquo;Baxter of California&</h1>
+    <main class="container container-inner">
+      <h1 class="content-header__headline headline">Набор для путешествий &laquo;Baxter of California&raquo;</h1>
       <ul class="breadcrumbs__list">
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="index.html">Главная</a>
+          <a class="breadcrumbs__link link" href="index.html">Главная</a>
         </li>
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="catalog.html">Магазин</a>
+          <a class="breadcrumbs__link link" href="catalog.html">Магазин</a>
         </li>
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="catalog.html">Средства для ухода</a>
+          <a class="breadcrumbs__link link" href="catalog.html">Средства для ухода</a>
         </li>
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link breadcrumbs__current">Набор для путешествий &laquo;Baxter of California&raquo;</a>
+        <li class="breadcrumbs__item breadcrumbs__current">Набор для путешествий &laquo;Baxter of California&raquo;
         </li>
       </ul>
 
@@ -73,14 +75,16 @@
 
       <section class="card-info">
         <h2 class="visually-hidden">Описание товара</h2>
-        <p class="card-info__availability">Есть в наличии</p>
-        <p class="card-info__vendor-code">Артикул: Dexter-ae</p>
-        <p class="card-info__short-info">Trave kit - Yеобходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство ля умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        <div class="card-info__description">
+          <p class="card-info__availability">Есть в наличии</p>
+          <p class="card-info__vendor-code">Артикул: Dexter-ae</p>
+        </div>
+        <p class="card-info__short-info">Travel kit - Необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство ля умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
         <p class="card-info__price">
           <b class="card-info__cost card-price">2 900 &#8381;</b>
-          <a class="card-info__button button" href="buy.html">Купить</a>
+          <a class="card-info__button button link" href="buy.html">Купить</a>
         </p>
-        <h3 class="card-info__kit-headline">В набор входят:</h3>
+        <h3 class="card-info__kit-headline headline-inner">В набор входят:</h3>
         <ul class="card-info__kit-list">
           <li class="card-info__kit-item">Cредство для умывания (50 мл)</li>
           <li class="card-info__kit-item">Увлажняющий крем (50 мл)</li>
@@ -94,31 +98,31 @@
       <p class="page-footer__contacts">
         Барбершоп &laquo;Borodinski&raquo;<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
-        Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
+        <a class="page-footer__link link" href="map.html">Как нас найти?</a><br>
+        Телефон: <a class="page-footer__phone-link link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
       </p>
       <div class="page-footer__social">
         <b class="page-footer__bold-text">Давайте дружить!</b>
         <ul class="page-footer__social-list">
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
           </li>
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
           </li>
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
           </li>
         </ul>
       </div>
       <p class="page-footer__copyright">
         <b class="page-footer__bold-text">Разработано:</b>
-        <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+        <a class="page-footer__button button link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
       </p>
     </footer>
 
     <section class="modal modal-login">
-      <h2 class="modal-login__headline">Личный кабинет</h2>
+      <h2 class="modal-login__headline headline">Личный кабинет</h2>
       <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
       <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
         <p class="modal-login__form-paragraph">
@@ -135,7 +139,7 @@
             <span class="modal-login__form-indicator"></span>
             Запомните меня
           </label>
-          <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
+          <a class="modal-login__form-restore link" href="restorepass.html" target="_blank">Я забыл пароль!</a>
         </p>
         <button class="modal-login__form-submit button" type="submit">Войти</button>
       </form>
