--- a/price.html
+++ b/price.html
@@ -5,53 +5,54 @@
     <title>Прайс-лист &laquo;Borodinski&raquo;</title>
     <meta name="keywords" content="barbershop, Brorodinski, барбершоп, Бородинский, baxter of california, mr natty, suavecito, malin+goetz, стрижка, стрижка бороды, накрутка усов">
     <meta name="description" content="Прайс-лист барбершоп &laquo;Borodinski&raquo;">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" type="text/css" rel="stylesheet">
+    <link href="css/style.css" type="text/css" rel="stylesheet">
   </head>
-  <body class="page">
+  <body class="page inner-page">
     <header class="page-header">
       <nav class="page-header__nav">
         <a class="page-header__logo" href="index.html" aria-label="Логотип">
           <img class="page-header__img" src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа &laquo;Borodinski&raquo;">
         </a>
-        <ul class="page-nav page-nav--main">
+        <ul class="page-nav page-nav__main">
           <li class="page-nav__item">
-            <a class="page-nav__link" href="info.html">Информация</a>
+            <a class="page-nav__link link" href="info.html">Информация</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="news.html">Новости</a>
+            <a class="page-nav__link link" href="news.html">Новости</a>
           </li>
           <li class="page-nav__item page-nav__current">
-            <a class="page-nav__link" href="price.html">Прайс-лист</a>
+            <a class="page-nav__link link" href="price.html">Прайс-лист</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="catalog.html">Магазин</a>
+            <a class="page-nav__link link" href="catalog.html">Магазин</a>
           </li>
           <li class="page-nav__item">
-            <a class="page-nav__link" href="contacts.html">Контакты</a>
+            <a class="page-nav__link link" href="contacts.html">Контакты</a>
           </li>
         </ul>
-        <ul class="page-nav page-nav--user">
-          <li class="page-nav__link login-link">
-            <a class="page-nav__link" href="login.html">Вход</a>
+        <ul class="page-nav page-nav__user">
+          <li class="page-nav__item">
+            <a class="page-nav__link login-link link" href="login.html">Вход</a>
           </li>
         </ul>
       </nav>
     </header>
-    <main class="container">
-      <h1 class="content-header__headline">Прайс-лист</h1>
+    <main class="container container-inner">
+      <h1 class="content-header__headline headline">Прайс-лист</h1>
       <ul class="breadcrumbs__list">
         <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="index.html">Главная</a>
+          <a class="breadcrumbs__link link" href="index.html">Главная</a>
         </li>
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link breadcrumbs__current">Прайс-лист</a>
-        </li>
+        <li class="breadcrumbs__item breadcrumbs__current">Прайс-лист</li>
       </ul>
 
       <p class="promo-text">Истинно мужская классика</p>
 
       <section class="equipment">
         <h2 class="visually-hidden">Оснащение</h2>
-        <b class="equipment__lid">Мы используем только лучшие средства:</b>
+        <b class="equipment__lid headline-inner">Мы используем только лучшие средства:</b>
         <ul class="equipment__list">
           <li class="equipment__item">Baxter of California</li>
           <li class="equipment__item">Mr Natty</li>
@@ -61,7 +62,7 @@
       </section>
 
       <section class="service-price">
-        <h2 class="service-price__headline">Цены на услуги наших мастеров:</h2>
+        <h2 class="service-price__headline headline-inner">Цены на услуги наших мастеров:</h2>
         <table class="service-price__table">
           <tr class="service-price__table-row">
             <th class="service-price__table-header">Стрижка</th>
@@ -79,7 +80,7 @@
       </section>
 
       <section class="about-us">
-        <h2 class="about-us__headline">Несколько слов о нас:</h2>
+        <h2 class="about-us__headline headline-inner">Несколько слов о нас:</h2>
         <p class="about-us__info">Наша парикмахерская занимается исключительно мужскими стрижками. Стрижка каждого клиента для нас - это уникальная и продуманная до мелочей работа. Мы не работаем на количество, мы делаем качество.</p>
       </section>
 
@@ -92,31 +93,31 @@
       <p class="page-footer__contacts">
         Барбершоп &laquo;Borodinski&raquo;<br>
         Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a class="page-footer__link" href="map.html">Как нас найти?</a><br>
-        Телефон: <a class="page-footer__phone-link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
+        <a class="page-footer__link link" href="map.html">Как нас найти?</a><br>
+        Телефон: <a class="page-footer__phone-link link" href="tel:+78126660266" aria-label="Позвонить нам">+7 (812) 666-02-66</a>
       </p>
       <div class="page-footer__social">
         <b class="page-footer__bold-text">Давайте дружить!</b>
         <ul class="page-footer__social-list">
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://vk.com" aria-label="Вконтакте" target="_blank"></a>
           </li>
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://facebook.com" aria-label="Фейсбук" target="_blank"></a>
           </li>
           <li class="page-footer__social-item">
-            <a class="page-footer__social-button" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
+            <a class="page-footer__social-button link" href="https://instagram.com" aria-label="Инстаграм" target="_blank"></a>
           </li>
         </ul>
       </div>
       <p class="page-footer__copyright">
         <b class="page-footer__bold-text">Разработано:</b>
-        <a class="page-footer__button" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+        <a class="page-footer__button button link" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
       </p>
     </footer>
 
     <section class="modal modal-login">
-      <h2 class="modal-login__headline">Личный кабинет</h2>
+      <h2 class="modal-login__headline headline">Личный кабинет</h2>
       <p class="modal-login__info">Введите пожалуйста свой логин и пароль</p>
       <form class="modal-login__form" action="https://echo.htmlacademy.ru" method="post">
         <p class="modal-login__form-paragraph">
@@ -133,7 +134,7 @@
             <span class="modal-login__form-indicator"></span>
             Запомните меня
           </label>
-          <a class="modal-login__form-restore" href="restorepass.html" target="_blank">Я забыл пароль!</a>
+          <a class="modal-login__form-restore link" href="restorepass.html" target="_blank">Я забыл пароль!</a>
         </p>
         <button class="modal-login__form-submit button" type="submit">Войти</button>
       </form>
